3.5.2/_sources/gallery/pyplots/pyplot_simple.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/pyplots/pyplot_simple.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_pyplots_pyplot_simple.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_pyplot_simple.py:


=============
Pyplot Simple
=============

A very simple pyplot where a list of numbers are ploted against their
index. Creates a straight line due to the rate of change being 1 for
both the X and Y axis.

.. GENERATED FROM PYTHON SOURCE LINES 10-15

.. code-block:: default

    import matplotlib.pyplot as plt
    plt.plot([1, 2, 3, 4])
    plt.ylabel('some numbers')
    plt.show()




.. image-sg:: /gallery/pyplots/images/sphx_glr_pyplot_simple_001.png
   :alt: pyplot simple
   :srcset: /gallery/pyplots/images/sphx_glr_pyplot_simple_001.png, /gallery/pyplots/images/sphx_glr_pyplot_simple_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 16-24

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.pyplot.plot`
   - `matplotlib.pyplot.ylabel`
   - `matplotlib.pyplot.show`


.. _sphx_glr_download_gallery_pyplots_pyplot_simple.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: pyplot_simple.py <pyplot_simple.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: pyplot_simple.ipynb <pyplot_simple.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
